sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/Windrow_Bagging__c.object-meta.xml
<CustomObject>
    <description>Windrow Bagging Process</description>
    <label>Windrow Bagging</label>
    <nameField>
        <label>Windrow Bagging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrow Bagging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>