sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/fields/Bag_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Bag_Weight_Kg__c</fullName>
    <description>Bag Weight Filled</description>
    <label>Bag Weight(Kg)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>