sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/fields/Bagging_Date__c.field-meta.xml
<CustomField>
    <fullName>Bagging_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the bags were filled</description>
    <label>Bagging Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>