sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/fields/Number_of_Bags__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bags__c</fullName>
    <description>Number of Bags Filled</description>
    <label>Number of Bags</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>