sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/fields/Total_Weight_Bagged_Kg__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Bagged_Kg__c</fullName>
    <formula>VALUE(TEXT(Bag_Weight_Kg__c)) * Number_of_Bags__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight Bagged(Kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>