sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/fields/Updated_to_Rootstock__c.field-meta.xml
<CustomField>
    <fullName>Updated_to_Rootstock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If inventory has been updated to RootStock</description>
    <label>Updated to Rootstock</label>
    <type>Checkbox</type>
</CustomField>