sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/fields/Windrow__c.field-meta.xml
<CustomField>
    <fullName>Windrow__c</fullName>
    <description>Existing Windrow to bag from</description>
    <label>Windrow</label>
    <referenceTo>Windrow__c</referenceTo>
    <relationshipLabel>Windrow Bagging</relationshipLabel>
    <relationshipName>Windrow_Bagging</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>