sfSandBoxCode/force-app/main/default/objects/Windrow_Bagging__c/validationRules/Missing_Bag_Weight.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Bag_Weight</fullName>
    <active>true</active>
    <description>Error if Windrow Bagging Record is missing the bag weight type.</description>
    <errorConditionFormula>AND(IF( ISBLANK(TEXT(Bag_Weight_Kg__c)) , 1, 0) =1)</errorConditionFormula>
    <errorDisplayField>Bag_Weight_Kg__c</errorDisplayField>
    <errorMessage>Please select the bag type</errorMessage>
</ValidationRule>